added maven plugins to publish to central
Signed-off-by: schnow265 <thesnowbox@icloud.com>